3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/collect.pl.in: Modify it so that it will collect .trs (treasure) files and
   build a treasures.bld from that as well as the existing treasures file.  In
   this way, treasure information for objects can be put in the arch
   directory.
lib/Makefile.am, Makefile.in: Modified so that it copies over the
   treasures.bld to treasures in the destination directory.  Have
   the collect directive also build the images, so that a double
   make isn't necessary.
lib/treasures.bld: Added file - like the archetypes, this is the pre-
   build treasure file.  Until .trs files are added, this will just
   match the treasures file with some additional comments.
MSW 2003-05-26

common/map.c: Fix bug causing unnecessary crashes - ok for the map
    to match if the object has been removed.
socket/loop.c: Only make call to draw_client_map() if we have a valid
    map to draw.
MSW 2003-05-26

common/anim.c: Patch by AV to make sure multipart monsters animations
   stay in sync.  MSW 2003-05-25

server/apply.c: Fix bug in that we weren't calling esrv_map_scroll()
   when player used a shop map but lacked sufficient funds to pay
   for his items.
MSW 2002-05-23

common/item.c, common/utils.c, include/config.h: Add #define NEW_MATERIAL_CODE
   and checks in the other files for this - if this is commented out
   (default), then the new material naming code is disabled - material
   names won't be put in the items names as shown in the inventory
   (can still see material by examining an object), and objects that are
   created will be created with the default material (eg, iron for